--- a/_posts/2017-04-04-一篇又臭又长的HTTP简介.md
+++ b/_posts/2017-04-04-一篇又臭又长的HTTP简介.md
@@ -15,6 +15,8 @@ HTTP协议（**超文本传输协议**）是互联网的基础协议，每天都
 
 2.简单快速：客户向服务器请求服务时，只需传送请求方法和路径。请求方法常用的有GET、HEAD、POST。每种方法规定了客户与服务器联系的类型不同。由于HTTP协议简单，使得HTTP服务器的程序规模小，因而通信速度很快。
 
+<!--more-->
+
 3.灵活：HTTP允许传输任意类型的数据对象。正在传输的类型由Content-Type加以标记。
 
 4.无连接：无连接的含义是限制每次连接只处理一个请求。服务器处理完客户的请求，并收到客户的应答后，即断开连接。采用这种方式可以节省传输时间。
