--- a/_posts/2019-07-06-记一个 HTTP 超时问题.md
+++ b/_posts/2019-07-06-记一个 HTTP 超时问题.md
@@ -4,11 +4,13 @@ title: "记一个 HTTP 超时问题"
 author: "Gerald"
 ---
 
-最近有同事反应我们的 app 在分类页网络正常时偶尔会出现请求超时。第一反应是分类服务挂掉了，服务层的同事逐层排查下来发现 api 层并没有产生异常日志，应该不是服务本身或者依赖的中台服务挂掉了。
+最近有同事反映我们的 app 在网络正常的情况下偶尔会出现请求超时。我的第一反应是某个服务挂掉了（因为最近服务端再搞重构），就反馈给了服务层。但是服务层的同事排查下来发现 api 层并没有产生异常日志，应该不是服务本身或者依赖的中台服务挂掉了。
 <!--more-->
-再看下来请求甚至没有打到网关，这个就很奇怪了。我花了大半天复现出一例，从Charles 抓的包看起来就是简单的 HTTP 请求超时了，请求的参数应该没错，很诡异。
+再看下来请求甚至没有打到网关，这个就很奇怪了。
 
-#### 定位
+我花了大半天复现出一例，从Charles 抓的包看起来就是简单的 HTTP 请求超时了，请求的参数应该没错，很诡异。
+
+### 定位
 
 想起来 `NSURLSession` 有个默认的单个`Host`最大连接数，超过之后会进入排队，可能导致后续服务超时。
 
@@ -55,7 +57,7 @@ AFHTTPSessionManager *manager = [[AFHTTPSessionManager alloc] initWithBaseURL:[N
 
 #### 修复
 
-修复很简单，我们把上面的 Manager 修改成了属性，保证了唯一性。完了使用 Xcode 的 Network 工具再看一下，嗯，看起来是我们想要的了
+修复很简单，我们把上面的 Manager 修改成了属性，保证了唯一性。完了使用 Xcode 的 Network 工具再看一下。嗯，看起来是复用了
 
 ![Screen Shot 2019-07-04 at 10.14.59 AM](/assets/Screen Shot 2019-07-04 at 10.14.59 AM.png)
 
@@ -65,7 +67,7 @@ AFHTTPSessionManager *manager = [[AFHTTPSessionManager alloc] initWithBaseURL:[N
 
 ![Screen Shot 2019-07-08 at 4.50.26 PM](/assets/Screen Shot 2019-07-08 at 4.50.26 PM.png)
 
-看上去问题是去服务端握手的时候服务端没回应，反应给服务端同事，一开始以为是单个 Linux 主机有个理论上的最大连接数限制 65536之类的问题，后来觉得不可能。最终我们猜测是服务端之前设置了单个 api 的最大连接数，或者说防火墙那边会有一段时间内的单个 ip 的最大连接数限制造成的。这个问题的根本应该是在服务端，但是客户端修复了的连接方式会缓解这个问题。
+看上去问题是去服务端握手的时候服务端没回应，反馈给服务端同事，一开始以为是单个 Linux 主机有个理论上的最大连接数限制 65536之类的问题，后来觉得不可能。最终我们猜测是服务端之前设置了单个 api 的最大连接数，或者说防火墙那边会有一段时间内的单个 ip 的最大连接数限制造成的。这个问题的根本应该是在服务端，但是客户端修复了的连接方式会缓解这个问题。
 
 #### 验证
 
@@ -89,4 +91,4 @@ AFHTTPSessionManager *manager = [[AFHTTPSessionManager alloc] initWithBaseURL:[N
 
 ![Screen Shot 2019-07-08 at 5.32.19 PM](/assets/Screen Shot 2019-07-08 at 5.32.19 PM.png)
 
-如图，客户端发送了 FIN ACK 之后并没有等到服务端回复 ACK 和 FIN ACK，直接关闭了连接，这个通道收到任何信息都会回复 RST 通知服务端关闭连接，一开始以为是异常，后来跟踪下来发现并不是，可能是 iOS 内部实现做了优化吧。
+如图，客户端发送了 FIN ACK 之后并没有等到服务端回复 ACK 和 FIN ACK，直接关闭了连接，之后这个通道再收到任何信息都会回复 RST 通知服务端关闭连接，一开始以为是异常，后来跟踪下来发现并不是，可能是 iOS 内部实现做了优化吧。
