--- a/_posts/2019-07-06-记一个 HTTP 超时问题.md
+++ b/_posts/2019-07-06-记一个 HTTP 超时问题.md
@@ -42,10 +42,10 @@ author: "Gerald"
 
 直接看代码吧，我们现在项目里有两套网络请求的框架，一套是`Objective-C`的基于`AFNetworking`的老代码，一套是为了向`Swift`迁移新实现，一番折腾，在以前的基础库里找到了这段看似平平无奇的代码：
 
-~~~
+```swift
 AFHTTPSessionManager *manager = [[AFHTTPSessionManager alloc] initWithBaseURL:[NSURL URLWithString:@""]];
 [manager POST:api parameters:params progress:nil success:^(NSURLSessionDataTask * _Nonnull task, id  _Nullable responseObject) {...}
-~~~
+```
 
 这段代码的实现里 `AFHTTPSessionManager`  每次都是新创建出来的，虽然系统默认开启了 Keep-Alive ，但是 TCP  通道并不会复用，相当于一个披着 HTTP 1.1 外衣的 1.0连接，这就回答了第一个疑问。
 
