fix syntax error

--- a/_posts/2020-01-16-iOS 非侵入式埋点方案.md
+++ b/_posts/2020-01-16-iOS 非侵入式埋点方案.md
@@ -189,7 +189,7 @@ func chooseCoupon() {
 
 如果对传输的数据量有高的要求，或者对性能有严格要求，更好的方案就是类似美团在 [美团点评前端无痕埋点实践](https://tech.meituan.com/2017/03/02/mt-mobile-analytics-practice.html) 中提到的方案 按需自动埋点。
 
-简单来说就是利用swift关联属性和类别的语法特性，无需重写UI控件，实现声明式打点。对于UIControl，在声明埋点时添加新的 action，并在事件发生时自动填写埋点代码
+简单来说就是利用 OC 关联属性和类别的语法特性，无需重写UI控件，实现声明式打点。 对于UIControl，在声明埋点时添加新的 action，并在事件发生时自动填写埋点代码
 
 ~~~swift
 // 代码来自 https://tech.meituan.com/2017/03/02/mt-mobile-analytics-practice.html
