--- a/_posts/2020-07-30-复杂列表滑动优化(一).md
+++ b/_posts/2020-07-30-复杂列表滑动优化(一).md
@@ -60,7 +60,7 @@ author: "Gerald"
 
 - **系统 API 优化**
 
-  真做过优化的肯定都知道，系统有几个 API 是挺好使也耗时的，为什么说好使，因为打错了不想删。
+  真做过优化的肯定都知道，系统有几个 API 是挺耗时的
 
   - **boundingRect 文本算高**
 
